Fixed uneven card layout for pro section. Fixed bottom margin for pro section for different screen sizes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,35 +215,7 @@ light green    #A2D4AF   rgb(103, 192, 138)
 
 /* ---------------   Navbar ----------------------------*/
 
-/* .navbar {
-      position: fixed;
-      background-color: #212529;
-      width: 100%;
-      height: 65px;
-      bottom: 0;
-      padding: 10px;
-      z-index: 800;
-}
 
-.navbar h2 {
-    font-size: 1.5rem;
-}
-
-.quick-links {
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    color: rgb(44, 135, 201);
-}
-
-.quick-links h2 {
-    text-decoration: none;
-}
-
-.item-label{
-    display: none;
-} */
 
 /* ----------------------------------  Sections general  ----------------------------*/
 
@@ -634,7 +606,11 @@ td:first-child {
         flex-direction: row;
         justify-content: center;
         padding: 0;
-}
+        }
+
+    .bottom-margin {
+    margin-bottom: 55px;
+    }
 
 }
 
@@ -661,6 +637,10 @@ td:first-child {
         flex-direction: column;
         justify-content: center;
         padding: 0;
+    }
+
+    .bottom-margin {
+    margin-bottom: 55px;
     }
 
 }
@@ -743,7 +723,7 @@ td:first-child {
     }
 
     .bottom-margin {
-    margin-bottom: 65px;
+    margin-bottom: 55px;
     }
 
 }
